--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,13 +14,13 @@ on:
 jobs:
   build-macos-arm64:
     name: Build macOS arm64
-    runs-on: macos-14
+    runs-on: macos-15
     strategy:
       matrix:
         architecture: ['arm64']
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Build
         run: |
@@ -40,20 +40,20 @@ jobs:
           cp aria2c-macos-${{ matrix.architecture }}.tar.gz ${{ github.workspace }}/
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: aria2c-macos-${{ matrix.architecture }}
           path: aria2c-macos-${{ matrix.architecture }}.tar.gz
           
   build-macos-x86_64:
     name: Build macOS x86_64
-    runs-on: macos-13
+    runs-on: macos-15-intel
     strategy:
       matrix:
         architecture: ['x86_64']
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Build
         run: |
@@ -73,42 +73,8 @@ jobs:
           cp aria2c-macos-${{ matrix.architecture }}.tar.gz ${{ github.workspace }}/
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: aria2c-macos-${{ matrix.architecture }}
           path: aria2c-macos-${{ matrix.architecture }}.tar.gz
 
-  release:
-    needs: [build-macos-arm64, build-macos-x86_64]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v2
-        with:
-          path: artifacts
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
-
-      - name: Upload Release Assets
-        run: |
-          for file in ./artifacts/aria2c-*/*; do
-            if [ -f "$file" ]; then
-              asset_name=$(basename $file)
-              echo "Uploading asset: $asset_name"
-              gh release upload ${GITHUB_REF#refs/tags/} "$file" --repo ${{ github.repository }}
-            fi
-          done
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
