--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
           
   build-macos-x86_64:
     name: Build macOS x86_64
-    runs-on: macos-13
+    runs-on: macos-14-intel
     strategy:
       matrix:
         architecture: ['x86_64']
@@ -77,5 +77,6 @@ jobs:
         with:
           name: aria2c-macos-${{ matrix.architecture }}
           path: aria2c-macos-${{ matrix.architecture }}.tar.gz
+
 
 
