--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   build-macos-arm64:
     name: Build macOS arm64
-    runs-on: macos-14
+    runs-on: macos-15
     strategy:
       matrix:
         architecture: ['arm64']
@@ -24,9 +24,7 @@ jobs:
 
       - name: Build
         run: |
-          brew install autoconf
-          brew install automake
-          brew install wget
+          brew install gmp sqlite3 c-ares libssh2 libgcrypt expat zlib wget automake autoconf
           wget https://github.com/aria2/aria2/releases/download/release-1.37.0/aria2-1.37.0.tar.gz
           tar -zxf aria2-1.37.0.tar.gz
           cd aria2-1.37.0
@@ -47,7 +45,7 @@ jobs:
           
   build-macos-x86_64:
     name: Build macOS x86_64
-    runs-on: macos-14-intel
+    runs-on: macos-15-intel
     strategy:
       matrix:
         architecture: ['x86_64']
@@ -57,9 +55,7 @@ jobs:
 
       - name: Build
         run: |
-          brew install autoconf
-          brew install automake
-          brew install wget
+          brew install gmp sqlite3 c-ares libssh2 libgcrypt expat zlib wget automake autoconf
           wget https://github.com/aria2/aria2/releases/download/release-1.37.0/aria2-1.37.0.tar.gz
           tar -zxf aria2-1.37.0.tar.gz
           cd aria2-1.37.0
@@ -77,6 +73,7 @@ jobs:
         with:
           name: aria2c-macos-${{ matrix.architecture }}
           path: aria2c-macos-${{ matrix.architecture }}.tar.gz
+
 
 
 
